--- a/webpage.html
+++ b/webpage.html
@@ -5,8 +5,10 @@
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Fade-Fox</h1>
+<p>This is a TECH website.</p>
 
+       body {
+        background-color: #1c87c9;
 </body>
 </html>
