--- a/webpage.html
+++ b/webpage.html
@@ -8,7 +8,10 @@
 <h1>Fade-Fox</h1>
 <p>This is a TECH website.</p>
 
-       body {
+    <style>
+      body {
         background-color: #1c87c9;
+      }
+    </style>
 </body>
 </html>
