--- a/webpage.html
+++ b/webpage.html
@@ -8,10 +8,13 @@
 <h1>Fade-Fox</h1>
 <p>This is a TECH website.</p>
 
-    <style>
-      body {
-        background-color: #1c87c9;
-      }
-    </style>
+<style>
+body {
+  background-image: url('https://images8.alphacoders.com/433/433999.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 </body>
 </html>
