--- a/webpage.html
+++ b/webpage.html
@@ -15,11 +15,15 @@ body {
   background-attachment: fixed;
   background-size: 100% 100%;
 }
-</style>
-</body>
+  </style>
+  
+<style>
+p{
+color:#FFFFFF;
+  }
+ </style>
+
+  </body>
 </html>
 
-p{
-color:#FFFFFF
-}
 
