--- a/webpage.html
+++ b/webpage.html
@@ -8,11 +8,7 @@
 <h1>Fade-Fox</h1>
 <p>This is a TECH website.</p>
   
-  <font>
-p{
-  color:#FFFFFF;
-  }
- <font>
+style=“color: white”
   
   <style>
 body {
