--- a/webpage.html
+++ b/webpage.html
@@ -8,9 +8,17 @@
 <h1>Fade-Fox</h1>
 <p>This is a TECH website.</p>
   
-<h1> {
+  
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+<p> {
        color: white;
 }
+</style>
+</head>
+<body>
   
   <style>
 body {
