--- a/webpage.html
+++ b/webpage.html
@@ -9,16 +9,11 @@
 <p>This is a TECH website.</p>
   
   
-<!DOCTYPE html>
 <html>
-<head>
-<style>
-<p> {
-       color: white;
-}
-</style>
-</head>
 <body>
+<font color=”red”>This text will be red.</font>
+</body>
+</html>
   
   <style>
 body {
