--- a/webpage.html
+++ b/webpage.html
@@ -11,13 +11,13 @@
   
 <html>
 <body>
-<font color=”red”>This text will be red.</font>
+<font color=”white”>This text will be white.</font>
 </body>
 </html>
   
   <style>
 body {
-  background-image: url('pine.jpg');
+  background-image: url('https://tse2.mm.bing.net/th?id=OIP.ZEemoi2xfV8pMgricOSYgQHaEK&pid=Api&P=0');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
