--- a/webpage.html
+++ b/webpage.html
@@ -11,7 +11,7 @@
   
 <html>
 <body>
-<font color=”#FFFF”>This text will be white.</font>
+<font color=”#FFFFFF”>This text will be white.</font>
 </body>
 </html>
   
