--- a/webpage.html
+++ b/webpage.html
@@ -6,13 +6,11 @@
 <body>
 
 <h1>Fade-Fox</h1>
-<p>This is a TECH website.</p>
-  
-  
+
 <html>
 <body>
-<p color=”#FFFFFF”p>
-<body>
+<font color=”#0000FF”>This is a TECH Website</font>
+</body>
 </html>
   
   <style>
