--- a/webpage.html
+++ b/webpage.html
@@ -9,7 +9,7 @@
 
 <html>
 <body>
-<font color=”#0000FF”>This is a TECH Website</font>
+<font color=”#FFFFFF”>This is a TECH Website</font>
 </body>
 </html>
   
