--- a/webpage.html
+++ b/webpage.html
@@ -23,3 +23,8 @@ body {
   background-size: 100% 100%;
 }
 </style>
+
+    <div class="w3-container w3-border w3-large">
+  <div class="w3-left-align"><p>Left aligned text.</p></div>
+  <div class="w3-right-align"><p>Right aligned text.</p></div>
+</div>
