--- a/webpage.html
+++ b/webpage.html
@@ -24,7 +24,7 @@ body {
 }
 </style>
 
-    <div class="w3-container w3-border w3-large">
-  <div class="w3-left-align"><p>Left aligned text.</p></div>
-  <div class="w3-right-align"><p>Right aligned text.</p></div>
-</div>
+  <head>
+    <!-- 'title' tag with content of 'Home' -->
+    <title>Home</title>
+  </head>
