--- a/webpage.html
+++ b/webpage.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-    <!-- 'title' tag with content of 'Home' -->
-    <title>Home</title>
-  </head>
-  
   <head>
 <title>Page Title</title>
 </head>
@@ -30,3 +25,4 @@ body {
 }
 </style>
 
+<a href="url">https://discord.gg/8R4czNucGM</a>
