--- a/webpage.html
+++ b/webpage.html
@@ -25,4 +25,4 @@ body {
 }
 </style>
 
-<a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a>
+    <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
