--- a/webpage.html
+++ b/webpage.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 
-  <Font>
-<h1>Fade-Fox</h1>
-  <Font>
+<html>
+<h1>
+<font color=”#FFFFFF”>FADE-FOX</font>
+</h1>
+</html>
 
 <html>
 <body>
