--- a/webpage.html
+++ b/webpage.html
@@ -21,7 +21,7 @@
   <style>
 body {
   background-image: url('https://tse2.mm.bing.net/th?id=OIP.ZEemoi2xfV8pMgricOSYgQHaEK&pid=Api&P=0');
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
 }
