--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -28,3 +28,11 @@ body {
 </style>
 
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
+  
+   <head>
+      <title>HTML img Tag</title>
+   </head>
+   <body>
+      <img src = "https://www.tutorialspoint.com/html5/images/html5-mini-logo.jpg"
+      alt = "Learn HTML5" height = "250" width = "270" />
+   </body>
