--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -29,6 +29,7 @@ body {
 
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
+<html>
    <head>
       <title>HTML img Tag</title>
    </head>
@@ -36,3 +37,4 @@ body {
       <img src = "https://www.tutorialspoint.com/html5/images/html5-mini-logo.jpg"
       alt = "Learn HTML5" height = "250" width = "270" />
    </body>
+</html>
