--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -29,12 +29,4 @@ body {
 
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
-<html>
-   <head>
-      <title>HTML img Tag</title>
-   </head>
-   <body>
-      <img src = "https://www.tutorialspoint.com/html5/images/html5-mini-logo.jpg"
-      alt = "Learn HTML5" height = "250" width = "270" />
-   </body>
-</html>
+<link rel="shortcut icon" href="http://www.example.com/myicon.ico"/>
