--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -29,4 +29,5 @@ body {
 
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
-<link rel="shortcut icon" href="http://www.example.com/myicon.ico"/>
+link rel="SHORTCUT ICON" href="favicon.ico" type="image/x-icon" />
+<link rel="ICON" href="favicon.ico" type="image/ico" />
