--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -29,5 +29,8 @@ body {
 
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
-link rel="SHORTCUT ICON" href="favicon.ico" type="image/x-icon" />
-<link rel="ICON" href="favicon.ico" type="image/ico" />
+<picture>
+  <source media="(min-width:650px)" srcset="img_pink_flowers.jpg">
+  <source media="(min-width:465px)" srcset="img_white_flower.jpg">
+  <img src="img_orange_flowers.jpg" alt="Flowers" style="width:auto;">
+</picture>
