--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -30,5 +30,5 @@ body {
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
 <head>
-<link rel="icon" href="favicon.png">
+<link rel="icon" href="https://c2.staticflickr.com/8/7229/7330163782_78581abb86_b.jpg">
 </head>
