--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -29,6 +29,4 @@ body {
 
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
-<head>
-<link rel="icon" href="https://c2.staticflickr.com/8/7229/7330163782_78581abb86_b.jpg">
-</head>
+<img src="https://reactgo.com/download.png" />
