--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -29,4 +29,4 @@ body {
 
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
-<img src="https://reactgo.com/download.png" />
+  <img src="Untitled.png">
