--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -4,7 +4,7 @@
   <div class="menu">
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
-      <a href="index.html">Project Title</a>
+      <a href="http://muellers-software.org/muelcities/">DONT CLICK</a>
   </div>
 </div>
   
@@ -37,3 +37,4 @@ body {
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
   <img src="Untitled.png">
+ 
