--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <div class="menu">
-  <div class="menu-table flex-row-space-between">
-    <div class="logo flex-row-center">
-      <a href="http://muellers-software.org/muelcities/">DONT CLICK</a>
-  </div>
-</div>
+
   
   <head>
 <title>Page Title</title>
@@ -36,5 +31,11 @@ body {
 
     <p><a href="https://discord.gg/8R4czNucGM">DISCORD LINK</a></p>
   
+    <div class="menu">
+  <div class="menu-table flex-row-space-between">
+    <div class="logo flex-row-center">
+      <a href="http://muellers-software.org//">Credit to muller for his website for insperation</a>
+  </div>
+</div>
   <img src="Untitled.png">
  
