--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -37,5 +37,10 @@ body {
       <a href="http://muellers-software.org//">Credit to muller for his website for insperation</a>
   </div>
 </div>
-  <img src="Untitled.png">
+ 
+    <html>
+<body>
+<font color=”#FFFFFF”>my computers </font>
+</body>
+</html>  
  
