--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -38,9 +38,10 @@ body {
   </div>
 </div>
  
-    <html>
+
+      <html>
 <body>
-<font color=”#FFFFFF”>my computers </font>
+<font color=”#FFFFFF”> My Computers </font>
 </body>
 </html>  
  
