--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -39,9 +39,16 @@ body {
 </div>
  
 
+      
+<html>
+<h1>
+<font color=”#FFFFFF”>MY Computers</font>
+</h1>
+</html>      
+      
       <html>
 <body>
-<font color=”#FFFFFF”> My Computers </font>
+<font color=”#FFFFFF”>MacBook Pro 2012 </font>
 </body>
 </html>  
  
