--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -48,7 +48,11 @@ body {
       
       <html>
 <body>
-<font color=”#FFFFFF”>MacBook Pro 2012 </font>
+<font color=”#FFFFFF”>
+  MacBook Pro 2012
+  MacBook 2008
+  
+  </font>
 </body>
 </html>  
  
