--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -53,7 +53,11 @@ body {
 </body>
 </html>  
  
-   <p2>
+
+      
+      
+       <html>
+      <p2>
 <font color=”#FFFFFF”>MacBook 2008</font>
 </p2>
 </html>   
