--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -48,17 +48,13 @@ body {
       
       <html>
 <body>
-<font color=”#FFFFFF”> MacBook Pro 2012
+<font color=”#FFFFFF”> MacBook Pro 2012,MacBook 2008
   </font>
 </body>
 </html>  
  
 
-         <html>
-      <p2>
-<font color=”#FFFFFF”>MacBook 2008</font>
-</p2>
-</html>   
+ 
       
   
 
