--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -53,8 +53,12 @@ body {
 </body>
 </html>  
  
-
- 
+      <html>
+<h1>
+<font color=”#FFFFFF”>Youtube</font>
+</h1>
+</html>  
       
-  
+    <p><a href="https://discord.gg/8R4czNucGM">YOUTUBE LINK</a></p>
+ 
 
