--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-  <body>
-  <div class="header">
-    <img class="headertitle" src="img/logotrim.png" height="45"><a class="headertitle">Mueller's Software Domain</a>
-  </div>
-  <div class="content">
+     </div>
+    </noscript>
+    <div class="box" id="banner">
+      <p style="text-align: center"><img src="img/logo.png"></p>
+    </div>
 
   
   <head>
