--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-     </div>
-    </noscript>
-    <div class="box" id="banner">
-      <p style="text-align: center"><img src="img/logo.png"></p>
-    </div>
+  <title>Mueller's Software Domain :: Home</title>
+  <link rel="stylesheet" type="text/css" href="./styles.css"/>
+</head>
 
   
   <head>
