--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  <title>Mueller's Software Domain :: Home</title>
+  <title>FADE-FOX</title>
   <link rel="stylesheet" type="text/css" href="./styles.css"/>
 </head>
 
@@ -38,6 +38,7 @@ body {
   <div class="menu-table flex-row-space-between">
     <div class="logo flex-row-center">
       <a href="http://muellers-software.org//">Credit to muller for his website for insperation</a>
+      <link rel="shortcut icon" href="https://c2.staticflickr.com/8/7229/7330163782_78581abb86_b.jpg" />
   </div>
 </div>
  
