--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -2,7 +2,7 @@
 <html>
 
   <title>FADE-FOX</title>
-  <link rel="stylesheet" type="text/css" href="./styles.css"/>
+  <link rel="favicon" type="text/css" href="./styles.css"/>
 </head>
 
   
