--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -2,9 +2,13 @@
 <html>
 
   <title>FADE-FOX</title>
-  <link rel="favicon" type="text/css" href="./styles.css"/>
 </head>
 
+<head>
+  <title>My Page Title</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+</head>
+<body>
   
   <head>
 <title>Page Title</title>
