--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -6,7 +6,7 @@
 
 <head>
   <title>My Page Title</title>
-  <link rel="icon" type="image/x-icon" href="https://c2.staticflickr.com/8/7229/7330163782_78581abb86_b.jpg">
+  <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/9/96/Fordham_Rams_F_Logo.png">
 </head>
 <body>
   
