--- a/FADEFOX.html
+++ b/FADEFOX.html
@@ -53,7 +53,12 @@ body {
 <font color=”#FFFFFF”>MY Computers</font>
 </h1>
 </html>      
-      
+    
+      <html>
+<h1>
+<font color=”#FFFFFF”>CHAZ IT IS MY WEBSITE</font>
+</h1>
+</html>    
       <html>
 <body>
 <font color=”#FFFFFF”> MacBook Pro 2012 , MacBook 2008 
